objects/FileUDMO_SI_index__dll.object
<CustomObject>
    <fields>
        <fullName>ContextField__c</fullName>
        <label>Context Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FilePath__c</fullName>
        <label>File Path</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroundingSourceId__c</fullName>
        <label>Grounding Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_RecordId__c</fullName>
        <label>KQ_RecordId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_SourceRecordId__c</fullName>
        <label>KQ_SourceRecordId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecordId__c</fullName>
        <label>Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VectorEmbedding__c</fullName>
        <label>Vector Embedding</label>
        <type>Array</type>
    </fields>
</CustomObject>